--- a/Inventory-helper/src/views/PanelMovement.form
+++ b/Inventory-helper/src/views/PanelMovement.form
@@ -30,16 +30,11 @@
     <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-112,0,0,2,-53"/>
   </AuxValues>
 
-  <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
-    <Property name="columns" type="int" value="0"/>
-    <Property name="rows" type="int" value="1"/>
-  </Layout>
+  <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout"/>
   <SubComponents>
     <Container class="javax.swing.JPanel" name="jPanel2">
 
-      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout">
-        <Property name="axis" type="int" value="1"/>
-      </Layout>
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout"/>
       <SubComponents>
         <Container class="javax.swing.JScrollPane" name="scrollPaneDealings">
           <AuxValues>
@@ -52,10 +47,10 @@
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="4" rowCount="34">
-                    <Column editable="false" title="Nombre" type="java.lang.String"/>
-                    <Column editable="false" title="Cantidad" type="java.lang.String"/>
+                    <Column editable="false" title="ID" type="java.lang.String"/>
+                    <Column editable="false" title="Tipo" type="java.lang.String"/>
                     <Column editable="false" title="Valor" type="java.lang.String"/>
-                    <Column editable="false" title="Tipo de movimiento" type="java.lang.String"/>
+                    <Column editable="false" title="Fecha" type="java.lang.String"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -89,6 +84,37 @@
             </Component>
           </SubComponents>
         </Container>
+      </SubComponents>
+    </Container>
+    <Container class="javax.swing.JPanel" name="panelButtons">
+
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout">
+        <Property name="axis" type="int" value="3"/>
+      </Layout>
+      <SubComponents>
+        <Component class="javax.swing.JButton" name="btnSeeDetails">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Detallar Movimiento"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSeeDetailsActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnModifyMovement">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Modificar Movimiento"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnRegisterMovement">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Registrar Movimiento"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnDeleteMovement">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Eliminar Movimiento"/>
+          </Properties>
+        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
