--- a/Inventory-helper/src/views/Window.form
+++ b/Inventory-helper/src/views/Window.form
@@ -96,12 +96,12 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnReportsActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="btnDealings">
+        <Component class="javax.swing.JButton" name="btnMovements">
           <Properties>
-            <Property name="text" type="java.lang.String" value="DEALINGS"/>
+            <Property name="text" type="java.lang.String" value="MOVEMENTS"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDealingsActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMovementsActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnProducts">
